--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "moti": "^0.17.1",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
